add pip install for social plugin and add search

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ theme:
     - navigation.expand
     - toc.follow
     - navigation.top
+    - search.suggest
 extra_css:
   - assets/stylesheets/extra.css
 markdown_extensions:
@@ -73,6 +74,8 @@ extra:
 copyright: Made with <span class="twemoji sbd-beating sbd-heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M14 20.408c-.492.308-.903.546-1.192.709-.153.086-.308.17-.463.252h-.002a.75.75 0 0 1-.686 0 16.709 16.709 0 0 1-.465-.252 31.147 31.147 0 0 1-4.803-3.34C3.8 15.572 1 12.331 1 8.513 1 5.052 3.829 2.5 6.736 2.5 9.03 2.5 10.881 3.726 12 5.605 13.12 3.726 14.97 2.5 17.264 2.5 20.17 2.5 23 5.052 23 8.514c0 3.818-2.801 7.06-5.389 9.262A31.146 31.146 0 0 1 14 20.408z"></path></svg></span><span class="md-footer-copyright__highlight"><a href="https://www.google.com/maps/place/Colombia/@4.645345,-83.3038499,4z/data=!4m5!3m4!1s0x8e15a43aae1594a3:0x9a0d9a04eff2a340!8m2!3d4.570868!4d-74.297333" target="_blank" rel="noopener"> in Colombia</a></span> (not Columbia)
 plugins:
   - social
+  - search: 
+      lang: es
 
 nav:
     - Home: index.md
